# flipnote

./: CMakeLists.txt  lien.txt
res/: Q12233_15E71BBAC4989_000.ppm
res/gimp/: button_control.xcf  button_control2.xcf  button_pause.xcf
src/: Globals.h  main.cpp
src/BaseUI/: DSThumbnail.cpp  DSThumbnail.h
src/BaseUI/Editor/: EditorBrushButton.cpp  EditorBrushButton.h  EditorButton.cpp  EditorButton.h  EditorPenButton.cpp  EditorPenButton.h  EditorTimelineButton.cpp  EditorTimelineButton.h  FlipnoteDisplay.cpp  FlipnoteDisplay.h  FlipnoteEditor.cpp  FlipnoteEditor.h  FlipnoteTimeline.cpp  FlipnoteTimeline.h
src/BaseUI/Editor/BrushMenu/: BrushButton.cpp  BrushButton.h  BrushSizeButton.cpp  BrushSizeButton.h
src/BaseUI/Editor/EditorButtons/: EditorBrushButton.cpp  EditorBrushButton.h  EditorButton.cpp  EditorButton.h  EditorPenButton.cpp  EditorPenButton.h  EditorPlayButton.cpp  EditorPlayButton.h  EditorTimelineButton.cpp  EditorTimelineButton.h  FrogMenuButton.cpp  FrogMenuButton.h  LayerButton.cpp  LayerButton.h
src/BaseUI/Editor/FrogMenu/: SpeedSetting.cpp  SpeedSetting.h
src/BaseUI/Editor/Menu/: MenuAligner.cpp  MenuAligner.h
src/BaseUI/Editor/PenMenu/: ColorButton.cpp  ColorButton.h  PenMenuAligner.cpp  PenMenuAligner.h
src/BaseUI/Editor/Popups/: FilenamePopup.cpp  FilenamePopup.h
src/BaseUI/Gallery/: FlipnoteGallery.cpp  FlipnoteGallery.h  GalleryEntry.cpp  GalleryEntry.h
src/BaseUI/Generic/: Background.cpp  Background.h  CheckBox.cpp  CheckBox.h  ChildContainer.cpp  ChildContainer.h  ClickableWidget.cpp  ClickableWidget.h  IconButton.cpp  Label.cpp  Label.h  PopupMenu.cpp  PopupMenu.h  PopupMenuItem.cpp  PopupMenuItem.h  PopupMenuTop.cpp  PopupMenuTop.h  TopBar.cpp  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h  WinWidgetContainer.cpp  WinWidgetContainer.h
src/Core/: FlipnoteRessources.cpp  FlipnoteRessources.h  Globals.h  Ressources.cpp  Ressources.h  RoundCorner.cpp  RoundCorner.h  RunState.h  Tileset.cpp  Tileset.h  Utils.cpp  Utils.h
src/Core/Flipnote/: Flipnote.cpp  Flipnote.h  FlipnoteFrame.cpp  FlipnoteFrame.h  FlipnoteLayer.cpp  FlipnoteLayer.h  FlipnotePainter.cpp  FlipnotePainter.h  PaintCondition.h
src/Core/States/: EditorState.cpp  EditorState.h  GalleryState.cpp  GalleryState.h  MainMenuState.cpp  MainMenuState.h
src/Reusable/: DebugOverlay.cpp  DebugOverlay.h  DeltaTime.cpp  DeltaTime.h  Globals.cpp  Globals.h  GraphicalObject.h  Ressources.cpp  Ressources.h  RunState.cpp  RunState.h  Tileset.cpp  Tileset.h  Utils.cpp  Utils.h
src/Reusable/State/: SimpleState.cpp  SimpleState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
src/Reusable/gui/: Background.cpp  Background.h  CheckBox.cpp  CheckBox.h  ChildContainer.cpp  ChildContainer.h  ClickableWidget.cpp  ClickableWidget.h  FullscreenPopup.cpp  FullscreenPopup.h  IconButton.cpp  IconButton.h  Label.cpp  Label.h  PopupMenu.cpp  PopupMenu.h  PopupMenuTop.cpp  PopupMenuTop.h  TextField.cpp  TextField.h  TopBar.cpp  TopBar.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h  WinWidgetContainer.cpp  WinWidgetContainer.h
